[package]
name = "wikidata-werkzeug"
version = "0.1.0"
edition = "2021"
description = "Filter Wikidata dumps (JSON and RDF truthy format)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
bzip2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flate2 = "1"
lz4_flex = { version = "0.11", features = ["frame"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
